force-app/main/default/objects/Financial_Data__c/Financial_Data__c.object-meta.xml
<CustomObject>
    <description>Houses the financial performance of an Account for the Business</description>
    <label>Financial Data</label>
    <nameField>
        <displayFormat>FD# {00000000}</displayFormat>
        <label>Financial Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>