force-app/main/default/objects/Financial_Data__c/fields/Costs_MTD__c.field-meta.xml
<CustomField>
    <fullName>Costs_MTD__c</fullName>
    <description>Data point for costs month to date</description>
    <inlineHelpText>Contains the costs for this account month to date</inlineHelpText>
    <label>Costs MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>