force-app/main/default/objects/Financial_Data__c/fields/Garage_Workload_YTD__c.field-meta.xml
<CustomField>
    <fullName>Garage_Workload_YTD__c</fullName>
    <label>Garage Workload YTD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>