force-app/main/default/objects/Financial_Data__c/fields/Holdings__c.field-meta.xml
<CustomField>
    <fullName>Holdings__c</fullName>
    <label>Holdings</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>