force-app/main/default/objects/Financial_Data__c/fields/Income_YTD__c.field-meta.xml
<CustomField>
    <fullName>Income_YTD__c</fullName>
    <label>Income YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>