force-app/main/default/objects/Financial_Data__c/fields/IPJ_MTD__c.field-meta.xml
<CustomField>
    <fullName>IPJ_MTD__c</fullName>
    <inlineHelpText>Income per Job Month to Date</inlineHelpText>
    <label>IPJ MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>