force-app/main/default/objects/Financial_Data__c/fields/IPJ_YTD__c.field-meta.xml
<CustomField>
    <fullName>IPJ_YTD__c</fullName>
    <inlineHelpText>Income per Job Year to Date</inlineHelpText>
    <label>IPJ YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>