force-app/main/default/objects/Financial_Data__c/fields/Margin_MTD__c.field-meta.xml
<CustomField>
    <fullName>Margin_MTD__c</fullName>
    <label>Margin MTD</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>