force-app/main/default/objects/Financial_Data__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <inlineHelpText>The date represents the month the PnL is for.</inlineHelpText>
    <label>Month</label>
    <type>Date</type>
</CustomField>