force-app/main/default/objects/Financial_Data__c/fields/Operating_Margin_YTD__c.field-meta.xml
<CustomField>
    <fullName>Operating_Margin_YTD__c</fullName>
    <label>Operating Margin YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>