force-app/main/default/objects/Financial_Data__c/fields/Ops_CPC_MTD__c.field-meta.xml
<CustomField>
    <fullName>Ops_CPC_MTD__c</fullName>
    <inlineHelpText>Ops Cost per Claim Month to Date</inlineHelpText>
    <label>Ops CPC MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>