force-app/main/default/objects/Financial_Data__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Required to segment financial data from all areas of the AA</description>
    <inlineHelpText>Select the business area this data relates to</inlineHelpText>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Drivetech</fullName>
            </value>
            <value>
                <fullName>Accident Management</fullName>
            </value>
            <value>
                <fullName>Prestige</fullName>
            </value>
            <value>
                <fullName>AA-X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>