force-app/main/default/objects/Financial_Data__c/fields/Total_Cases_YTD__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases_YTD__c</fullName>
    <label>Total Cases YTD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>