force-app/main/default/objects/Financial_Data__c/fields/Total_Tasks_YTD__c.field-meta.xml
<CustomField>
    <fullName>Total_Tasks_YTD__c</fullName>
    <label>Total Tasks YTD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>