force-app/main/default/objects/Financial_Data__c/fields/Variable_Margin_MTD__c.field-meta.xml
<CustomField>
    <fullName>Variable_Margin_MTD__c</fullName>
    <description>Data point for variable margin t month to date</description>
    <inlineHelpText>Contains the variable margin for this account month to date</inlineHelpText>
    <label>Variable Margin MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>