force-app/main/default/objects/Financial_Data__c/fields/Variable_Margin_YTD__c.field-meta.xml
<CustomField>
    <fullName>Variable_Margin_YTD__c</fullName>
    <description>data point for variable margin for this account year to date</description>
    <inlineHelpText>Contains the variable margin for this account year to date</inlineHelpText>
    <label>Variable Margin YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>