force-app/main/default/objects/Financial_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Month__c</columns>
    <columns>Income_YTD__c</columns>
    <columns>Variable_Margin_YTD__c</columns>
    <columns>Holdings__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>